Completed nav toggle anim, fixed intro text, fixed nav circle, added scrollbars

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,12 @@
   -webkit-overflow-scrolling: touch;
 }
 
+html,
+body {
+  height: 100vh;
+  overflow: hidden;
+}
+
 h1,
 h2,
 h3,
@@ -55,20 +61,16 @@ img {
 
 /* scrollbar */
 
-html {
-  scroll-behavior: smooth;
-}
-
-body::-webkit-scrollbar {
+.main::-webkit-scrollbar {
   width: 8px;
 }
 
 
-body::-webkit-scrollbar-track {
+.main::-webkit-scrollbar-track {
   background-color: #242424;
 }
 
-body::-webkit-scrollbar-thumb {
+.main::-webkit-scrollbar-thumb {
   background-color: #484848;
   border-radius: 4px;
 }
@@ -92,6 +94,7 @@ body::-webkit-scrollbar-thumb {
   background: linear-gradient(to top right, #444444 0%, #444444 50%, transparent 50%, transparent 100%);
   transform-origin: top left;
   rotate: 25deg;
+  transition: rotate 500ms cubic-bezier(1, 0, 0.25, 1);
 }
 
 .nav__link {
@@ -199,10 +202,16 @@ body::-webkit-scrollbar-thumb {
   height: 320px;
   width: 320px;
   border-radius: 50%;
+  z-index: 2;
   box-shadow: 6px 1px 0 6px rgba(225, 255, 255, 0.05),
     6px 1px 0 12px rgba(225, 255, 255, 0.05),
     6px 1px 0 18px rgba(225, 255, 255, 0.05),
     inset -12px -2px 4px 8px #eeeeee;
+  transition: rotate 500ms cubic-bezier(1, 0, 0.25, 1);
+}
+
+.nav__circle:hover {
+  cursor: pointer;
 }
 
 .nav__circle::after {
@@ -215,47 +224,57 @@ body::-webkit-scrollbar-thumb {
   top: 172px;
   left: 128px;
   box-shadow: 48px -16px 0 16px #eeeeee,
-    16px 40px 0 8px #eeeeee;
+    16px 40px 0 8px #eeeeee,
+    -48px -8px 0 12px #eeeeee,
+    0px -40px 0 8px #eeeeee;
 }
 
-.nav__burger {
+.nav--bars,
+.nav--times {
   position: absolute;
-  top: 216px;
-  left: 200px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 32px;
   height: 32px;
 }
 
-.nav__burger:hover {
-  cursor: pointer;
+.nav--bars {
+  top: 216px;
+  left: 200px;
 }
 
-.nav__line {
-  width: 32px;
-  height: 3px;
+.nav--times {
+  top: 216px;
+  left: 88px;
+  rotate: 75deg;
+}
+
+/* open */
+
+.page {
+  background-color: #444444;
+}
+
+.main__wrapper {
+  height: 200vh;
   background-color: #242424;
-  transition: all 300ms ease;
+  transform-origin: top left;
+  transition: rotate 500ms cubic-bezier(1, 0, 0.25, 1);
 }
 
-.nav__line::before,
-.nav__line::after {
-  content: '';
-  position: absolute;
-  width: 32px;
-  height: 3px;
-  background-color: #000000;
-  transition: all 300ms ease;
+.main {
+  height: 100vh;
+  overflow-y: scroll;
 }
 
-.nav__line::before {
-  translate: -16px -10px;
+.open .main__wrapper {
+  rotate: -30deg;
 }
 
-.nav__line::after {
-  translate: -16px 10px;
+.open .nav__circle {
+  rotate: -75deg;
+}
+
+.open .nav__background {
+  rotate: 0deg;
 }
 
 /* intro__text */
@@ -266,10 +285,9 @@ body::-webkit-scrollbar-thumb {
 }
 
 .intro__text {
-  position: absolute;
-  top: 30%;
-  left: 20%;
   width: 600px;
+  padding-top: 15%;
+  margin-left: 20%;
 }
 
 .intro__title,
@@ -285,7 +303,7 @@ body::-webkit-scrollbar-thumb {
   font-weight: 300;
 }
 
-/* portfolio */
+/* projects */
 
 .projects {
   height: 200vh;
@@ -300,5 +318,4 @@ body::-webkit-scrollbar-thumb {
 .projects__title {
   padding: 64px;
   font-size: 64px;
-  color: #d1405f;
 }
